# mgallery

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  config.h.in  configure.ac
include/: Makefile.am  Makefile.in  decoder.h  encoder.h  md5.h  pmp.h  res_hash.h  text_id.h
lib/: Makefile.am  Makefile.in  bmplabel.c  captionbar.c  decoder.c  encoder.c  infowin.c  intl.c  md5c.c  menu.c  new_win_callback.c  pmp_res_hash.c  resource.c  sel_win.c  sel_win_list.c  sel_win_thu.c  text_en.c  text_zhcn.c  tip.c
res/: Makefile.am  Makefile.in  captionbar_bk_gif.c  captionbar_logo_png.c  captionbar_power_png.c  desktop_bk_gif.c  desktop_calc_png.c  desktop_calendar_png.c  desktop_ebook_png.c  desktop_housekeeper_png.c  desktop_music_png.c  desktop_picture_png.c  desktop_radio_png.c  desktop_recorder_png.c  desktop_russia_png.c  desktop_selected_rec_gif.c  desktop_setup_png.c  desktop_stopwatch_png.c  desktop_tip_gif.c  desktop_video_png.c  desktop_worm_png.c  menu_menu_body_gif.c  menu_menu_btm_gif.c  menu_menu_captbg_gif.c  menu_menu_mid_gif.c  menu_menu_top_gif.c  public_bg_gif.c  public_folder_png.c
res/calc/: Makefile.am  Makefile.in
res/calendar/: Makefile.am  Makefile.in
res/captionbar/: Makefile.am  Makefile.in  bk.gif_ic  logo.png_ic  power.png_ic
res/desktop/: Makefile.am  Makefile.in  bk.gif_ic  calc.png_ic  calendar.png_ic  ebook.png_ic  housekeeper.png_ic  music.png_ic  picture.png_ic  radio.png_ic  recorder.png_ic  russia.png_ic  selected_rec.gif_ic  setup.png_ic  stopwatch.png_ic  tip.gif_ic  video.png_ic  worm.png_ic
res/ebook/: Makefile.am  Makefile.in
res/housekeeper/: Makefile.am  Makefile.in
res/menu/: Makefile.am  Makefile.in
res/music/: Makefile.am  Makefile.in
res/num_pic/: Makefile.am  Makefile.in
res/picture/: Makefile.am  Makefile.in
res/public/: Makefile.am  Makefile.in  bg.gif_ic  folder.png_ic
res/recorder/: Makefile.am  Makefile.in
res/setup/: Makefile.am  Makefile.in
res/stopwatch/: Makefile.am  Makefile.in
res/video/: Makefile.am  Makefile.in
res/worm/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  calc.c  calc_btn_code.h  calc_compute.c  calc_size.h  calc_type.h  calendar.c  debug.h  ebook_display.c  ebook_edit_impl.h  ebook_listmodel.h  ebook_read_file.c  ebook_scrolled.h  ebook_scrollview.h  ebook_scrollview_impl.h  ebook_text.h  ebook_textedit_impl.h  housekeeper.c  housekeeper_data.h  housekeeper_map.c  housekeeper_map.h  main.c  monthcal.h  monthcalendar.c  monthcalendar_impl.h  music_lrc.c  music_menu.c  music_menu.h  music_play.c  picture.c  picture.h  picture_widget.c  pmp_music.h  radio.c  recorder.c  russia.c  setup.c  setup.h  setup_menu.h  (+8 more)
test/: Makefile.am  Makefile.in  intl_test.c  md5_test.c  menu_test.c  res_bmp_test.c  res_ds_test.c  res_hash_test.c  select_file_window_test.c  win_test.c
