noinst_LIBRARIES = libpmp.a  

libpmp_a_SOURCES = \
	resource.c pmp_res_hash.c md5c.c\
    menu.c infowin.c captionbar.c tip.c  \
    intl.c text_en.c text_zhcn.c \
    new_win_callback.c \
    decoder.c encoder.c  \
    sel_win.c  sel_win_list.c  sel_win_thu.c \
    bmplabel.c \
    ../res/captionbar_bk_gif.c \
    ../res/captionbar_logo_png.c \
    ../res/captionbar_power_png.c \
    ../res/desktop_bk_gif.c \
    ../res/desktop_calc_png.c \
    ../res/desktop_calendar_png.c \
    ../res/desktop_ebook_png.c \
    ../res/desktop_housekeeper_png.c \
    ../res/desktop_music_png.c \
    ../res/desktop_picture_png.c \
    ../res/desktop_radio_png.c \
    ../res/desktop_recorder_png.c \
    ../res/desktop_russia_png.c \
    ../res/desktop_selected_rec_gif.c \
    ../res/desktop_setup_png.c \
    ../res/desktop_stopwatch_png.c \
    ../res/desktop_tip_gif.c \
    ../res/desktop_video_png.c \
    ../res/desktop_worm_png.c \
    ../res/menu_menu_body_gif.c \
    ../res/menu_menu_btm_gif.c \
    ../res/menu_menu_captbg_gif.c \
    ../res/menu_menu_mid_gif.c \
    ../res/menu_menu_top_gif.c \
    ../res/public_bg_gif.c \
    ../res/public_folder_png.c 

libpmp_a_LIBDD= -lminigui -lmgext

INCLUDES = -I../include 
