
INCLUDES = -I../include

noinst_PROGRAMS = res_ds_test win_test menu_test intl_test select_file_window_test res_hash_test md5_test res_bmp_test


res_bmp_test_SOURCES= res_bmp_test.c
res_bmp_test_LDADD= ../lib/libpmp.a

md5_test_SOURCES= md5_test.c
md5_test_LDADD= ../lib/libpmp.a

res_ds_test_SOURCES= res_ds_test.c 
res_ds_test_LDADD= ../lib/libpmp.a

win_test_SOURCES = win_test.c
win_test_LDADD =  ../lib/libpmp.a

menu_test_SOURCES = menu_test.c
menu_test_LDADD =  ../lib/libpmp.a

intl_test_SOURCES = intl_test.c
intl_test_LDADD =  ../lib/libpmp.a

select_file_window_test_SOURCES= select_file_window_test.c
#select_file_window_test_LDADD= ../lib/libpmp.a -lminigui   -lpthread -lmgext  -lpng -ljpeg 
select_file_window_test_LDADD= ../lib/libpmp.a -lminigui   -lpthread -lmgext  -lpng  

res_hash_test_SOURCES = res_hash_test.c
res_hash_test_LDADD = ../lib/libpmp.a


 
