EXTRA_DIST=bk1.gif bk2.gif bk3.bmp bk3.gif bk.gif_ic \
           calc.png_ic calendar.png_ic ebook.png_ic housekeeper.png_ic \
           music.png_ic picture.png_ic radio.png_ic recorder.png_ic \
           russia.png_ic selected_rec.bmp selected_rec.gif_ic setup.png_ic \
           stopwatch.png_ic tip.bmp tip.gif_ic video.png_ic worm.png_ic 
