EXTRA_DIST=a-b.png a.png ab-a-.png \
           ab-a.png ab-replay.png \
           ab-void.png ab.png \
           bass.png clas.png \
           dbb.png folder.png \
           inorder.png jazz.png \
           loop_one.png music.png \
           music1.png music_icon.png \
           normal.png paused.png \
           playing.png pop.png random.png \
           rock.png slide.png slide_1.png \
           soft.png srs.png stoped.png \
           strip.bmp strip.jpg strip.png \
           strip2.png strip_1.png user.png \
           wow.png 
